# Helium

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  bochsrc.txt  doxygen.cfg  mainpage.dox  publish.sh
config/: grub.cfg
emu/: .gdbinit  README  run-qemu.sh
include/: helium.h
include/common/: elf64def.h  gdtdef.h  helium.h
include/currently_unused/: acpi.h
include/kernel/: bits.h  config.h  config.h.in  cpu.h  debug.h  helium.h  info.h  page.h  panic.h  screen.h  util.h
include/kernel/idris_rts/: idris_gc.h  idris_opts.h.txt  idris_rts.h  idris_stats.h
include/kernel/interrupts/: idt.h  int.h
include/kernel/klibc/: fmtstr.h  kstdio.h  kstdio_screen.h  kstdlib.h  string.h
include/kernel/mem/: pfa.h  vmm.h
include/loader/: debug.h  elf64.h  gdt.h  heap.h  idt.h  info.h  kassert.h  page.h  paging.h  pheap.h  screen.h  util.h
include/macros/: macros.inc
kernel32/: Makefile
kernel64/: Makefile  linker.ld
kernel64/src/: kernel.c
loader/: Makefile  linker.ld
loader/inc/: elf64.h  gdt.h  helium.h  idt.h  info.h  multiboot.h  paging.h  screen.h  string.h  text.h  util.h
loader/macros/: macros.inc
loader/src/: boot.s  boot16.s  boot32.s  boot64.s  elf64.c  heap.c  info.c  kernel.c  loader_main.c  main.c  multiboot.c  multiboot.s  page.c  paging.c  pheap.c  screen.c  string.c  text.c  util.c
loader/srcold/: boot.s  gdt.c  main.c  multiboot.s  paging.c  screen.c  string.c  util.c
src/docs/: klibc.md  page_frame_allocation.md  virtual_memory.md
src/grub/: CMakeLists.txt  grub.cfg.in
src/kernel/: CMakeLists.txt  acpi.c  boot32.asm  boot64.asm  cpu.c  debug.c  elf64.c  info.c  linker.ld  main.c  paging.c  panic.c  pheap.c  screen.c  string.c  util.c
src/kernel/boot/: boot16.asm  boot32.asm  boot64.asm
src/kernel/idris_rts/: idris_bitstring.c  idris_gc.c  idris_heap.c  idris_main.c.txt  idris_opts.c.txt  idris_rts.c  idris_stats.c  idris_stdfgn.c
src/kernel/info/: info.c
src/kernel/interrupts/: idt.c  int.c  ioapic.c  lapic.c  pic.c
src/kernel/klibc/: KLIBC.md  README.md  fmtstr.c  kstdio.c  kstdio_screen.c  kstdlib.c  string.c
src/kernel/mem/: PFA.md  pfa.c  vmm.c  vmm_handlers.asm
src/kernel/vmm/: VMM.md
tools/: cross-toolchain.sh  make-image.sh  mount-image.sh
